--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold;">MLE-Dojo<br><span style="font-size: 0.8em; font-weight: normal;">mproving LLM Agents for Machine
+            <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold;">MLE-Dojo<br><span style="font-size: 0.8em; font-weight: normal;">Improving LLM Agents for Machine
               Learning Engineering in Interactive Environments</span></h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
@@ -136,7 +136,7 @@
         <!-- Your video here -->
         <img src="static/images/banner.gif" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
-        MLE-Dojo is a Gym-style framework for systematically training, evaluating, and improving autonomous large language model (LLM) agents in iterative machine learning engineering (MLE) workflows.</h2>
+        MLE-Dojo is a Gym-style framework for systematically training, evaluating, and improving large language model (LLM) agents in iterative machine learning engineering (MLE) workflows.</h2>
     </div>
   </div>
 </section>
@@ -169,7 +169,13 @@ Furthermore, MLE-Dojo's flexible and extensible architecture seamlessly integrat
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">Introduction</h2>
-    Adapting black-box LLMs through fine-tuning APIs has several critical issues on <b>transparency</b>, <b>privacy</b>, and <b>cost</b>. The adaptation of black-box LLMs without the use of APIs remains an unresolved challenge.
+    MLE-Dojo serves as a systematic framework for training, evaluating, and improving MLE agents, with four key features:
+    <ul>
+      <li><b>Comprehensive Framework and Benchmark:</b> We establish MLE-Dojo as a comprehensive and large-scale benchmark consisting of over 200 Kaggle MLE competitions, enabling systematic and rigorous evaluations of autonomous LLM agents.</li>
+      <li><b>Interactive and Executable Environment:</b> MLE-Dojo provides an interactive and fully executable Gym-style environment that facilitates iterative experimentation, including comprehensive training trajectories sampling for supervised fine-tuning and reinforcement learning.</li>
+      <li><b>Advanced Functionalities and Scalability Supports:</b> MLE-Dojo uniquely facilitates outcome verification, model-agnostic agent tuning, and seamless integration of diverse datasets and tools, significantly accelerating the development of robust, generalizable, and scalable MLE agents.</li>
+      <li><b>Extensive Empirical Evaluation and Public Leaderboard:</b> We conduct large-scale evaluations across multiple state-of-the-art LLMs and agent scaffolds, with results publicly available through an actively maintained long-term real-time leaderboard to foster community-driven innovation.</li>
+    </ul>
     <br><br>
     <div style="display: flex; justify-content: center;">
       <img src="static/images/teaser.png" alt="MY ALT TEXT"width="450" height="310">
