--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <title>MLE-Dojo</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/scp/square_new.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
@@ -134,7 +134,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
         <!-- Your video here -->
-        <img src="static/images/banner.gif" alt="MY ALT TEXT"/>
+        <img src="static/images/scp/overview.jpg" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
         MLE-Dojo is a Gym-style framework for systematically training, evaluating, and improving large language model (LLM) agents in iterative machine learning engineering (MLE) workflows.</h2>
     </div>
@@ -178,7 +178,7 @@ Furthermore, MLE-Dojo's flexible and extensible architecture seamlessly integrat
     </ul>
     <br><br>
     <div style="display: flex; justify-content: center;">
-      <img src="static/images/teaser.png" alt="MY ALT TEXT"width="450" height="310">
+      <img src="static/images/scp/data.jpg" alt="MY ALT TEXT"width="450" height="310">
   </div>
     <br>
     Due to the black-box nature, users are unable to access
