--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ Furthermore, MLE-Dojo's flexible and extensible architecture seamlessly integrat
     <br>
     We evaluate BBox-Adapter on four distinct question-answering tasks, requiring model adaptation on mathematical (GSM8K), implicit-reasoning (StrategyQA), truthful (TruthfulQA), and scientific (ScienceQA) domains.     <ul>
     <h3 class="title">Main Results</h3>
-    <img src="static/images/main_table.png" alt="MY ALT TEXT">
+    <img src="static/images/scp/table.png" alt="MY ALT TEXT">
     <br>
     BBox-Adapter consistently outperforms gpt-3.5-turbo by an average of 6.39% across all datasets, highlighting its efficacy in adapting black-box LLMs to specific tasks.
     Notably, BBox-Adapter (AI Feedback) demonstrates competitive performance compared to BBox-Adapter (Ground-Truth), which demonstrates its robust generalization capability across datasets, even in the absence of ground-truth answers.
