--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
+            <figure class="image is-300x150" style="margin: 0 auto 1rem auto;">
+            <img src="static/images/scp/icon.jpg" alt="MLE-Dojo Logo">
+            </figure>
             <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold;">MLE-Dojo<br><span style="font-size: 0.8em; font-weight: normal;">Improving LLM Agents for Machine
               Learning Engineering in Interactive Environments</span></h1>
             <div class="is-size-5 publication-authors">
@@ -181,11 +184,11 @@ Furthermore, MLE-Dojo's flexible and extensible architecture seamlessly integrat
       <img src="static/images/scp/data.jpg" alt="MY ALT TEXT"width="720" height="480">
   </div>  
     <h2 class="title">Experiments</h2>
+    <h3 class="title">Main Results</h3>
     <br>
     We evaluate 8 mainstream LLMs as MLE Agents on 50 MLE-Dojo Evaluation tasks, which covers Tabular, NLP, CV, Time Series and so on.
     To ensure a comprehensive evaluation, we consider Area Under the Performance Profile (AUP), HumanRank Score (H-Rank, %), and Elo ranking together as metrics. 
     We actively maintain a long-term real-time leaderboard to foster community-driven innovation.<ul>
-    <h3 class="title">Main Results</h3>
     <img src="static/images/scp/table.png" alt="MY ALT TEXT">
     <br>
     Furthermore, we define the difficulty level of different tasks with the average performance of different
