--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <figure class="image is-300x150" style="margin: 0 auto 1rem auto;">
-            <img src="static/images/scp/icon.jpg" alt="MLE-Dojo Logo">
+            <figure style="text-align: center; margin-bottom: 1rem;">
+              <img src="static/images/scp/icon.jpg" alt="MLE-Dojo Logo" style="width: 120px; height: auto;">
             </figure>
             <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold;">MLE-Dojo<br><span style="font-size: 0.8em; font-weight: normal;">Improving LLM Agents for Machine
               Learning Engineering in Interactive Environments</span></h1>
