--- a/index.html
+++ b/index.html
@@ -181,14 +181,14 @@ Furthermore, MLE-Dojo's flexible and extensible architecture seamlessly integrat
     </ul>
     <br><br>
     <div style="display: flex; justify-content: center;">
-      <img src="static/images/scp/data.jpg" alt="MY ALT TEXT"width="720" height="480">
+      <img src="static/images/scp/elo_bar.jpg" alt="MY ALT TEXT"width="720" height="480">
   </div>  
     <h2 class="title">Experiments</h2>
-    <h3 class="title">Main Results</h3>
     <br>
     We evaluate 8 mainstream LLMs as MLE Agents on 50 MLE-Dojo Evaluation tasks, which covers Tabular, NLP, CV, Time Series and so on.
     To ensure a comprehensive evaluation, we consider Area Under the Performance Profile (AUP), HumanRank Score (H-Rank, %), and Elo ranking together as metrics. 
     We actively maintain a long-term real-time leaderboard to foster community-driven innovation.<ul>
+    <h3 class="title">Main Results</h3>
     <img src="static/images/scp/table.png" alt="MY ALT TEXT">
     <br>
     Furthermore, we define the difficulty level of different tasks with the average performance of different
