--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <figure style="text-align: center; margin-bottom: 1rem;">
               <img src="static/images/scp/icon.jpg" alt="MLE-Dojo Logo" style="width: 300px; height: auto;">
             </figure>
-            <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold;">MLE-Dojo<br><span style="font-size: 0.8em; font-weight: normal;">Improving LLM Agents for Machine
+              <span style="font-size: 0.8em; font-weight: normal;">Improving LLM Agents for Machine
               Learning Engineering in Interactive Environments</span></h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
