--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <figure style="text-align: center; margin-bottom: 1rem;">
               <img src="static/images/scp/icon.jpg" alt="MLE-Dojo Logo" style="width: 300px; height: auto;">
             </figure>
+            <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold;">MLE-Dojo<br>
               <span style="font-size: 0.8em; font-weight: normal;">Improving LLM Agents for Machine
               Learning Engineering in Interactive Environments</span></h1>
             <div class="is-size-5 publication-authors">
@@ -189,16 +190,19 @@ Furthermore, MLE-Dojo's flexible and extensible architecture seamlessly integrat
     To ensure a comprehensive evaluation, we consider Area Under the Performance Profile (AUP), HumanRank Score (H-Rank, %), and Elo ranking together as metrics. 
     We actively maintain a long-term real-time leaderboard to foster community-driven innovation.<ul>
     <h3 class="title">Main Results</h3>
+    <br> Reasoning and coding models such as <code>o3-mini</code>, <code>DeepSeek-r1</code>, and <code>Gemini-2.5-Pro</code> 
+  consistently achieve high rankings across all metrics, demonstrating strong adaptability, robustness, and overall effectiveness as MLE Agents.
     <img src="static/images/scp/table.png" alt="MY ALT TEXT">
+    <h3 class="title">Difficulty</h3>
     <br>
-    Furthermore, we define the difficulty level of different tasks with the average performance of different
+    We define the difficulty level of different tasks with the average performance of different
 models in comparison with the human leaderboard. illustrates the average performance
 distribution across 8 frontier models on the tasks. As shown in the figure, CV tasks are the most
 challenging-none of them have an average HumanRank score above 60, and more than half fall below
 30. For MLE-Lite tasks, the average HumanRank scores mostly exceed 30. Difficulty levels of tasks
 in other domains are more evenly distributed.
       <img src="static/images/scp/difficulty.jpg" alt="MY ALT TEXT">
-    <h3 class="title">Plug-and-Play</h3>
+    <h3 class="title">Cost v.s. Performance</h3>
     <br>
     <img src="static/images/pnp.png" alt="MY ALT TEXT">
     <br>
