--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@ models in comparison with the human leaderboard. Figure below illustrates the av
 distribution across 8 frontier models on the tasks. As shown in the figure, CV tasks are the most
 challenging-none of them have an average HumanRank score above 60, and more than half fall below
 30. For MLE-Lite tasks, the average HumanRank scores mostly exceed 30. Difficulty levels of tasks
-in other domains are more evenly distributed. <br>
+in other domains are more evenly distributed. 
+      <br><br>
       <img src="static/images/scp/difficulty.jpg" alt="MY ALT TEXT">
     <h3 class="title">Cost v.s. Performance</h3>
     Figure below illustrates the cost-performance relationship across different LLMs and task categories.
@@ -210,7 +211,7 @@ in other domains are more evenly distributed. <br>
     Notably, tasks involving computer vision and deep neural network training pipelines consistently generate longer codes compared to classical ML tasks (<em>e.g.</em>, tabular analysis) executed on CPUs.
 
     While cost generally correlates with solution complexity and token consumption, some models, such as <code>DeepSeek-r1</code>, achieve competitive performance with significantly fewer tokens, highlighting potential cost-efficiency opportunities.
-
+    <br><br>
     <img src="static/images/scp/cost.jpg" alt="MY ALT TEXT">
     <h3 class="title">Step-wise Performance Dynamics</h3>
     Figure below presents the step-wise performance improvements across different models, illustrating variations in performance 
