--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ in other domains are more evenly distributed.
     Notably, tasks involving computer vision and deep neural network training pipelines consistently generate longer codes compared to classical ML tasks (<em>e.g.</em>, tabular analysis) executed on CPUs.
 
     While cost generally correlates with solution complexity and token consumption, some models, such as <code>DeepSeek-r1</code>, achieve competitive performance with significantly fewer tokens, highlighting potential cost-efficiency opportunities.
-    <br><br>
+    <div style="height: 2em;"></div>
     <img src="static/images/scp/cost.jpg" alt="MY ALT TEXT">
     <h3 class="title">Step-wise Performance Dynamics</h3>
     Figure below presents the step-wise performance improvements across different models, illustrating variations in performance 
@@ -220,7 +220,7 @@ in other domains are more evenly distributed.
     <code>DeepSeek-r1</code> and <code>Gemini-2.5-Pro</code> exhibit gradual improvements, achieving comparable or superior performance 
     in intermediate to later steps. Non-reasoning models occasionally outperform reasoning models at early or intermediate steps but 
     generally show limited improvement as steps progress, resulting in lower final scores.
-    <br>
+    <div style="height: 2em;"></div>
     <img src="static/images/scp/improve.jpg" alt="MY ALT TEXT">
     <h3 class="title">History Length and Solution Length</h3>
     Figure below shows both the total chat history length, including all interaction prompts, 
@@ -232,8 +232,8 @@ in other domains are more evenly distributed.
     increased solution length does not inherently ensure superior outcomes, it generally indicates a 
     model's capability to explore more intricate and sophisticated solution strategies, a hallmark 
     predominantly observed in more capable reasoning models.
-    <br>
-    <img src="static/images/scp/history.jpg" alt="MY ALT TEXT">
+    <div style="height: 2em;"></div>
+    <img src="static/images/scp/history.jpg" alt="MY ALT TEXT" style="width: 500px; height: auto;">
 
   </div>
 </section>
