--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <figure style="text-align: center; margin-bottom: 1rem;">
               <img src="static/images/scp/icon.jpg" alt="MLE-Dojo Logo" style="width: 300px; height: auto;">
             </figure>
-            <h1 class="title is-1 publication-title" style="font-size: 2.2em; font-weight: normal;">
+            <h1 class="title is-1 publication-title" style="font-size: 2.2em;">
               <strong>MLE-Dojo:</strong> Improving LLM Agents for Machine Learning Engineering in Interactive Environments
             </h1>
             <div class="is-size-5 publication-authors">
@@ -234,9 +234,9 @@ in other domains are more evenly distributed.
     <div style="text-align: center; margin-top: 1.5em;">
     <img src="static/images/scp/history.jpg" alt="MY ALT TEXT" style="width: 600px; height: auto;">
     </div>
-    <h2 class="title">Develop with <code>MLE-Dojo</code></h2>
+    <h2 class="title">Develop with MLE-Dojo</h2>
 
-    <h3><code>mledojo</code> Interface and APIs</h3>
+    <h3>Interface and APIs</h3>
     <p>
       We provide 
       <a href="https://github.com/MLE-Dojo/MLE-Dojo/example/example.ipynb" target="_blank">
