--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             <figure style="text-align: center; margin-bottom: 1rem;">
               <img src="static/images/scp/icon.jpg" alt="MLE-Dojo Logo" style="width: 300px; height: auto;">
             </figure>
-            <h1 class="title is-1 publication-title" style="font-size: 2.2em;">
-              <strong>MLE-Dojo:</strong> Improving LLM Agents for Machine Learning Engineering in Interactive Environments
-            </h1>
+          <h1 class="title is-1 publication-title" style="font-size: 2.2em;">
+            <strong>MLE-Dojo</strong>: Improving LLM Agents for Machine Learning Engineering in Interactive Environments
+          </h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
