--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <img src="static/images/scp/icon.jpg" alt="MLE-Dojo Logo" style="width: 300px; height: auto;">
             </figure>
           <h1 class="title is-1 publication-title" style="font-size: 2.2em;">
-            <strong>MLE-Dojo</strong>: Improving LLM Agents for Machine Learning Engineering in Interactive Environments
+            <strong style="font-family: monospace;">MLE-Dojo</strong>: Improving LLM Agents for Machine Learning Engineering in Interactive Environments
           </h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
