--- a/index.html
+++ b/index.html
@@ -297,10 +297,8 @@ in other domains are more evenly distributed.
     </p>
     <p>
       Access trajectory logs:
-      <ul>
-        <li><a href="https://github.com/MLE-Dojo/MLE-Dojo/trajectories/agent_trajectory.json" target="_blank"><strong>Agent History</strong></a></li>
-        <li><a href="https://github.com/MLE-Dojo/MLE-Dojo/trajectories/env_history.json" target="_blank"><strong>Environment History</strong></a></li>
-      </ul>
+<a href="https://github.com/MLE-Dojo/MLE-Dojo/trajectories/agent_trajectory.json" target="_blank"><strong>Agent History</strong></a>
+<a href="https://github.com/MLE-Dojo/MLE-Dojo/trajectories/env_history.json" target="_blank"><strong>Environment History</strong></a>
     </p>
 
       
