--- a/index.html
+++ b/index.html
@@ -294,11 +294,9 @@ in other domains are more evenly distributed.
     <h3 class="subtitle">Collect Trajectories for Training</h3>
     <p>
       MLE-Dojo tracks both <strong>agent behavior</strong> and <strong>environment responses</strong> with structured feedback, enabling training via Supervised Fine-Tuning (SFT) or Reinforcement Learning (RL).
-    </p>
-    <p>
-      Access trajectory logs:
-<a href="https://github.com/MLE-Dojo/MLE-Dojo/trajectories/agent_trajectory.json" target="_blank"><strong>Agent History</strong></a>
-<a href="https://github.com/MLE-Dojo/MLE-Dojo/trajectories/env_history.json" target="_blank"><strong>Environment History</strong></a>
+      The structured trajectory samples can be found at
+<a href="https://github.com/MLE-Dojo/MLE-Dojo/trajectories/agent_trajectory.json" target="_blank"><strong>Agent History</strong></a> and
+<a href="https://github.com/MLE-Dojo/MLE-Dojo/trajectories/env_history.json" target="_blank"><strong>Environment History</strong></a>.
     </p>
 
       
