--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@ in other domains are more evenly distributed.
     <div style="text-align: center; margin-top: 1.5em;">
     <img src="static/images/scp/history.jpg" alt="MY ALT TEXT" style="width: 600px; height: auto;">
     </div> -->
-    <h2 class="title">Develop with <strong>MLE-Dojo</strong></h2>
-    
+    <h2 class="title">Develop with MLE-Dojo</h2>
+    <p>
     <h3 class="subtitle">Interface and APIs</h3>
     <p>
       <a href="https://github.com/MLE-Dojo/MLE-Dojo/example/example.ipynb" target="_blank">
@@ -298,7 +298,7 @@ in other domains are more evenly distributed.
 <a href="https://github.com/MLE-Dojo/MLE-Dojo/trajectories/agent_trajectory.json" target="_blank"><strong>Agent History</strong></a> and
 <a href="https://github.com/MLE-Dojo/MLE-Dojo/trajectories/env_history.json" target="_blank"><strong>Environment History</strong></a>.
     </p>
-
+    </p>
       
   </div>
 </section>
