--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@ models in comparison with the human leaderboard. As shown in the figure, CV task
 challenging-none of them have an average HumanRank score above 60, and more than half fall below
 30. For MLE-Lite tasks, the average HumanRank scores mostly exceed 30. Difficulty levels of tasks
 in other domains are more evenly distributed. 
-      <br><br>
-      <img src="static/images/scp/difficulty.jpg" alt="MY ALT TEXT">
+    <br><br>
+    <img src="static/images/scp/difficulty.jpg" alt="MY ALT TEXT">
 <!--     <h3 class="title">Cost v.s. Performance</h3>
     Figure below illustrates the cost-performance relationship across different LLMs and task categories.
 
@@ -256,6 +256,10 @@ in other domains are more evenly distributed.
     </div> -->
     <h2 class="title">Develop with MLE-Dojo</h2>
     <p>
+    MLE-Dojo provides flexible Gym-style APIs that allow users to build personalized environments, introduce new datasets and develop/utilize different agent scaffolds. 
+    To facilitate model training via Supervised Fine-Tuning (SFT) or Reinforcement Learning (RL), MLE-Dojo provides a detailed history management system and a well-defined reward feedback mechanism, including both final outcome rewards and intermediate step rewards.
+      
+    </p>
     <h3 class="subtitle">Interface and APIs</h3>
     <p>
       <a href="https://github.com/MLE-Dojo/MLE-Dojo/example/example.ipynb" target="_blank">
@@ -297,7 +301,6 @@ in other domains are more evenly distributed.
       The structured trajectory samples can be found at
 <a href="https://github.com/MLE-Dojo/MLE-Dojo/trajectories/agent_trajectory.json" target="_blank"><strong>Agent History</strong></a> and
 <a href="https://github.com/MLE-Dojo/MLE-Dojo/trajectories/env_history.json" target="_blank"><strong>Environment History</strong></a>.
-    </p>
     </p>
       
   </div>
