--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Furthermore, MLE-Dojo's flexible and extensible architecture seamlessly integrat
     <h2 class="title">Experiments</h2>
     We evaluate 8 mainstream LLMs as MLE Agents on 50 MLE-Dojo Evaluation tasks, which covers Tabular, NLP, CV, Time Series and so on.
     To ensure a comprehensive evaluation, we consider Area Under the Performance Profile (AUP), HumanRank Score (H-Rank, %), and Elo ranking together as metrics. 
-    We actively maintain a long-term real-time leaderboard to foster community-driven innovation.<ul>
+    We actively maintain a long-term real-time leaderboard to foster community-driven innovation.
     <h3 class="title">Main Results</h3>
     Reasoning and coding models such as <code>o3-mini</code>, <code>DeepSeek-r1</code>, and <code>Gemini-2.5-Pro</code> 
   consistently achieve high rankings across all metrics, demonstrating strong adaptability, robustness, and overall effectiveness as MLE Agents.
