--- a/index.html
+++ b/index.html
@@ -122,6 +122,19 @@
                   <span>arXiv</span>
                 </a>
               </span>
+
+
+
+                <!-- Hugging Face Leaderboard Link -->
+                <span class="link-block">
+                  <a href="https://huggingface.co/spaces/MLE-Dojo/Leaderboard" target="_blank"
+                  class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fas fa-chart-bar"></i>
+                    </span>
+                    <span>Leaderboard</span>
+                  </a>
+                </span>
             </div>
           </div>
         </div>
