--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <figure style="text-align: center; margin-bottom: 1rem;">
-              <img src="static/images/scp/icon.jpg" alt="MLE-Dojo Logo" style="width: 300px; height: auto;">
+              <img src="static/images/scp/icon_long.jpg" alt="MLE-Dojo Logo" style="width: 300px; height: auto;">
             </figure>
           <h1 class="title is-1 publication-title" style="font-size: 2.2em; font-weight: normal;"> <strong style="font-weight: bold; font-style: monospace;">MLE-Dojo</strong>: <span style="font-weight: normal;">Improving LLM Agents for Machine Learning Engineering in Interactive Environments</span> </h1>
             <div class="is-size-5 publication-authors">
