--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/jerrycool2002/MLE-Dojo" target="_blank"
+                    <a href="https://github.com/MLE-Dojo/MLE-Dojo" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -275,7 +275,7 @@ in other domains are more evenly distributed.
     </p>
     <h3 class="subtitle">Interface and APIs</h3>
     <p>
-      <a href="https://github.com/MLE-Dojo/MLE-Dojo/example/example.ipynb" target="_blank">
+      <a href="https://github.com/MLE-Dojo/MLE-Dojo/blob/master/example/example.ipynb" target="_blank">
         📘 Quick API Example
       </a>
     </p>
