--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ in other domains are more evenly distributed.
     </p>
     <h3 class="subtitle">Interface and APIs</h3>
     <p>
-      <a href="https://github.com/MLE-Dojo/MLE-Dojo/blob/master/example/example.ipynb" target="_blank">
+      <a href="https://github.com/MLE-Dojo/MLE-Dojo/blob/main/example/example.ipynb" target="_blank">
         📘 Quick API Example
       </a>
     </p>
@@ -302,6 +302,9 @@ in other domains are more evenly distributed.
       <li>
         <strong>KaggleEnvironment</strong>: Wraps all components into a Gym-compatible interface. Manages setup, action execution, state tracking, and feedback generation.
       </li>
+      <li>
+        <strong>KaggleEnvironment</strong>: Wraps all components into a Gym-compatible interface. Manages setup, action execution, state tracking, and feedback generation.
+      </li>
     </ul>
     
     <p>
@@ -312,8 +315,8 @@ in other domains are more evenly distributed.
     <p>
       MLE-Dojo tracks both <strong>agent behavior</strong> and <strong>environment responses</strong> with structured feedback, enabling training via Supervised Fine-Tuning (SFT) or Reinforcement Learning (RL).
       The structured trajectory samples can be found at
-<a href="https://github.com/MLE-Dojo/MLE-Dojo/trajectories/agent_trajectory.json" target="_blank"><strong>Agent History</strong></a> and
-<a href="https://github.com/MLE-Dojo/MLE-Dojo/trajectories/env_history.json" target="_blank"><strong>Environment History</strong></a>.
+<a href="https://github.com/MLE-Dojo/MLE-Dojo/blob/main/trajectories/agent_trajectory.json" target="_blank"><strong>Agent History</strong></a> and
+<a href="https://github.com/MLE-Dojo/MLE-Dojo/blob/main/trajectories/env_history.json" target="_blank"><strong>Environment History</strong></a>.
     </p>
       
   </div>
