--- a/index.html
+++ b/index.html
@@ -59,16 +59,30 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://haotiansun.tech" target="_blank">Haotian Sun</a><sup>*</sup>,</span>
+                <a href="https://rushi-q.github.io/jerrycool2002.github.io/" target="_blank">Rushi Qiang</a><sup>*</sup>,</span>
                 <span class="author-block">
                   <a href="https://night-chen.github.io" target="_blank">Yuchen Zhuang</a><sup>*</sup>,</span>
                   <span class="author-block">
-                    <a href="http://www.weiwei.one" target="_blank">Wei Wei</a><sup></sup>,</span>
+                    <a href="https://yinghao-li.github.io/e" target="_blank">Yinghao Li</a><sup></sup>,</span>
                     <span class="author-block">
-                      <a href="http://chaozhang.org" target="_blank">Chao Zhang</a><sup></sup>,</span>
+                      <a href="" target="_blank">Dingu Sagar V K</a><sup></sup>,</span>
                   <span class="author-block">
-                    <a href="https://bo-dai.github.io" target="_blank">Bo Dai</a>
-                  </span>
+                    <a href="https://rongzhizhang.org/" target="_blank">Rongzhi Zhang</a>
+                  <span class="author-block">
+                    <a href="https://lichangh20.github.io/" target="_blank">Changhao Li</a>
+                  <span class="author-block">
+                    <a href="" target="_blank">Ian Shu-Hei Wong</a>
+                  <span class="author-block">
+                    <a href="https://sherryy.github.io/" target="_blank">Sherry Yang</a>
+                  <span class="author-block">
+                    <a href="https://cs.stanford.edu/~pliang/" target="_blank">Percy Liang</a>
+                  <span class="author-block">
+                    <a href="http://chaozhang.org/" target="_blank">Chao Zhang</a>
+                  <span class="author-block">
+                    <a href="https://bo-dai.github.io/" target="_blank">Bo Dai</a>
+                    
+                  </span> 
+
                   
                   </div>
 
