--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
                     <span class="author-block">
                       <a href="" target="_blank">Dingu Sagar V K</a><sup></sup>,</span>
                   <span class="author-block">
-                    <a href="https://rongzhizhang.org/" target="_blank">Rongzhi Zhang</a>
+                    <a href="https://rongzhizhang.org/" target="_blank">Rongzhi Zhang</a><sup></sup>,</span>
                   <span class="author-block">
-                    <a href="https://lichangh20.github.io/" target="_blank">Changhao Li</a>
+                    <a href="https://lichangh20.github.io/" target="_blank">Changhao Li</a><sup></sup>,</span>
                   <span class="author-block">
-                    <a href="" target="_blank">Ian Shu-Hei Wong</a>
+                    <a href="" target="_blank">Ian Shu-Hei Wong</a><sup></sup>,</span>
                   <span class="author-block">
-                    <a href="https://sherryy.github.io/" target="_blank">Sherry Yang</a>
+                    <a href="https://sherryy.github.io/" target="_blank">Sherry Yang</a><sup></sup>,</span>
                   <span class="author-block">
-                    <a href="https://cs.stanford.edu/~pliang/" target="_blank">Percy Liang</a>
+                    <a href="https://cs.stanford.edu/~pliang/" target="_blank">Percy Liang</a><sup></sup>,</span>
                   <span class="author-block">
-                    <a href="http://chaozhang.org/" target="_blank">Chao Zhang</a>
+                    <a href="http://chaozhang.org/" target="_blank">Chao Zhang</a><sup></sup>,</span>
                   <span class="author-block">
-                    <a href="https://bo-dai.github.io/" target="_blank">Bo Dai</a>
+                    <a href="https://bo-dai.github.io/" target="_blank">Bo Dai</a><sup></sup>,</span>
                     
                   </span> 
 
@@ -87,9 +87,12 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Georgia Institute of Technology</span>
+                    <span class="author-block">Georgia Institute of Technology</span>,
+                    <span class="author-block">Stanford University</span>,
+                    <span class="author-block">UC Berkeley</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
+
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
