--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@
                   
                   </div>
 
-                  <div class="is-size-5 publication-authors">
-                    <span class="author-block">Georgia Institute of Technology</span>,
-                    <span class="author-block">Stanford University</span>,
-                    <span class="author-block">UC Berkeley</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
-                  </div>
-
+              <div class="is-size-5 publication-authors">
+                <span class="author-block">Georgia Institute of Technology</span>&nbsp;&nbsp;&nbsp;
+                <span class="author-block">Stanford University</span>&nbsp;&nbsp;&nbsp;
+                <span class="author-block">UC Berkeley</span>
+                <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+              </div>
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
