--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 
               <div class="is-size-5 publication-authors">
                 <span class="author-block">Georgia Institute of Technology</span>&nbsp;&nbsp;&nbsp;
-                <span class="author-block">Stanford University</span>&nbsp;&nbsp;&nbsp;
-                <span class="author-block">UC Berkeley</span>
+                <span class="author-block">Stanford University</span>
                 <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
               </div>
 
